2018-08-14  Rusell Almond  <ralmond@Cherry>

	* DESCRIPTION (Package): Renamed from EIEngine

2018-07-28  Rusell Almond  <ralmond@Cherry>

	* DESCRIPTION (Package): Created the package.
